2000-06-20  Karl Kraft <karl@nfox.com>
  This is a series of minor bug fixes that I've been meaning to check in for some time.
  *  GSWAssociations.m  Added some exception handling when getting an ivar so that when this raises an exception the name of the ivar causing the exception can be recorded and reported.  The exception is then re-raised
  *  GSWPopupButton.m <option> tag should not have a </option> closing tag.
  *  GSWRepetition.m If a repetition had no list, it would iterate from 0 to INT_MAX.
  *  GSWUtils.m Added another category method to NSException that would allow you to modify and extend the userInfo key.  
  *  GSWCheckBoxList.m The selectionList would consists of the descriptions of the selected objects.  It has been fixed to contain the selected objects as per the spec.  Also the TYPE=check in the html has been changed to TYPE=checkbox.   
  


  
2000-05-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWDebug.m: commented code for the new NSThread implementation.

2000-04-20  Karl Kraft <karl@nfox.com>
        *   Removed assignments to va_list because they don't work on PPC

2000-04-11  Karl Kraft <karl@nfox.com>
        *   Fixed a strcpy into a short malloc buffer in GSWAdaptors/common/GSWHTTPResponse.c

2000-04-06   Karl Kraft <karl@nfox.com>
	* Added two checks for non-nil key before calling removeObjectForKey:

2000-03-31  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWResourceManager.m: Added Debug Error Traces
	* GSWConstants.m: change frameworks extensions in debug mode
	* GSWeb.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
	* GSWExtensions.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
	* GSWExtensionsGSW.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
	
2000-03-23  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWAdaptor/common/config.h: changed GSWAPP_EXTENSION from wa to woa.

2000-03-20  Manuel Guesdon <mguesdon@sbuilders.com>
